[gd_scene load_steps=11 format=3 uid="uid://b30grfhncooda"]

[ext_resource type="Texture2D" uid="uid://0yonwkj7e7kk" path="res://Textures/Room_1/Room_01.png" id="1_3u2uh"]
[ext_resource type="PackedScene" uid="uid://dq4kwytxhacqt" path="res://Player/Player.tscn" id="1_4gufx"]
[ext_resource type="Script" path="res://Scripts/Room_1.gd" id="1_dxmjk"]
[ext_resource type="Texture2D" uid="uid://cvv0hbf45eynu" path="res://Textures/Room_1/sp.png" id="3_otakq"]
[ext_resource type="Texture2D" uid="uid://nk7ogop0we1l" path="res://Textures/Room_1/table.png" id="4_hthjg"]
[ext_resource type="PackedScene" uid="uid://d316df1i8m7dv" path="res://UI/pause_menu.tscn" id="6_hhrt6"]
[ext_resource type="PackedScene" uid="uid://cx2kphestwyfl" path="res://UI/dialog_box.tscn" id="7_y7d3c"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ue1v2"]
vertices = PackedVector2Array(377, 546, 367, 593, 344, 569, 341, 507, 261, 601, 273, 562, 261, 439, 277, 508, 644, 295, 798, 294, 792, 319, 735, 310, 404, 439, 715, 377, 649, 347, 791, 519, 795, 566, 685, 568, 760, 529, 764, 317, 791, 518, 730, 527, 686, 527, 705, 474, 652, 471, 648, 533, 625, 546, 398, 232, 632, 232)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(2, 1, 4, 5), PackedInt32Array(5, 4, 6, 7), PackedInt32Array(8, 9, 10, 11), PackedInt32Array(7, 6, 12, 3), PackedInt32Array(11, 13, 14, 8), PackedInt32Array(15, 16, 17, 18), PackedInt32Array(18, 19, 10, 20), PackedInt32Array(18, 20, 15), PackedInt32Array(21, 18, 17, 22), PackedInt32Array(23, 21, 22, 24), PackedInt32Array(24, 22, 25), PackedInt32Array(24, 25, 26, 12, 27, 28, 8, 14), PackedInt32Array(0, 3, 12, 26), PackedInt32Array(11, 10, 19)])
outlines = Array[PackedVector2Array]([PackedVector2Array(251, 612, 376, 603, 385, 556, 628, 556, 651, 543, 676, 539, 675, 579, 806, 576, 801, 518, 802, 320, 812, 284, 652, 285, 641, 223, 388, 222, 394, 429, 251, 429), PackedVector2Array(284, 553, 286, 518, 331, 517, 333, 558), PackedVector2Array(659, 363, 722, 391, 742, 322, 754, 325, 750, 518, 737, 517, 712, 465, 662, 462)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fvfky"]
size = Vector2(72.2726, 91.2675)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nn0c3"]
size = Vector2(119.5, 188)

[node name="Room_01" type="Node2D"]
script = ExtResource("1_dxmjk")
metadata/_edit_lock_ = true

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_ue1v2")
metadata/_edit_lock_ = true

[node name="YSort_Map" type="Node2D" parent="."]
y_sort_enabled = true
metadata/_edit_lock_ = true

[node name="Room01" type="Sprite2D" parent="YSort_Map"]
z_index = -1
position = Vector2(536, 323)
scale = Vector2(3.075, 3.075)
texture = ExtResource("1_3u2uh")
metadata/_edit_lock_ = true

[node name="Table" type="Sprite2D" parent="YSort_Map"]
position = Vector2(749.5, 504.065)
scale = Vector2(3.09836, 3.09836)
texture = ExtResource("4_hthjg")
offset = Vector2(0, -30)
metadata/_edit_lock_ = true

[node name="Sp" type="Sprite2D" parent="YSort_Map"]
position = Vector2(302, 549)
scale = Vector2(3.10416, 3.10416)
texture = ExtResource("3_otakq")
offset = Vector2(0, -19)
metadata/_edit_lock_ = true

[node name="Player" parent="YSort_Map" instance=ExtResource("1_4gufx")]
position = Vector2(489, 378)

[node name="Camera2D" type="Camera2D" parent="YSort_Map/Player"]
process_callback = 0
limit_left = 0
limit_right = 1150
position_smoothing_enabled = true
drag_horizontal_enabled = true
metadata/_edit_lock_ = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="UI" instance=ExtResource("6_hhrt6")]
offset_left = 3.0
offset_top = 1.0
offset_right = -1.0
metadata/_edit_lock_ = true

[node name="Dialog_Box" parent="UI" instance=ExtResource("7_y7d3c")]
offset_left = -3.0
offset_top = -1.0
offset_right = -3.0
offset_bottom = -1.0
metadata/_edit_lock_ = true

[node name="Interaction" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Move_Bar" type="Area2D" parent="Interaction"]
position = Vector2(695, 249)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction/Move_Bar"]
position = Vector2(-0.863708, 5.14999)
shape = SubResource("RectangleShape2D_fvfky")
metadata/_edit_lock_ = true

[node name="Door" type="Area2D" parent="Interaction"]
position = Vector2(473, 146)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction/Door"]
position = Vector2(-0.25, -7)
shape = SubResource("RectangleShape2D_nn0c3")
metadata/_edit_lock_ = true

[connection signal="body_entered" from="Interaction/Move_Bar" to="." method="_on_area_2d_body_entered"]
[connection signal="input_event" from="Interaction/Move_Bar" to="." method="_on_area_2d_input_event"]
[connection signal="body_entered" from="Interaction/Door" to="." method="_on_door_body_entered"]
[connection signal="input_event" from="Interaction/Door" to="." method="_on_door_input_event"]
